Added functionality to present scraped t-codes from static website

--- a/manifest.json
+++ b/manifest.json
@@ -20,10 +20,15 @@
     },
     "permissions": [
         "tabs",
-        "activeTab"
+        "activeTab",
+        "scripting"
     ],
+    "background": {
+        "service_worker": "background.js"  
+    },
     "host_permissions": [
-        "http://127.0.0.1:5000/*"
+        "http://127.0.0.1:5000/*",
+        "<all_urls>"
     ],
     "action": {
         "default_icon": {
