--- a/manifest.json
+++ b/manifest.json
@@ -1,41 +1,26 @@
 {
-    "manifest_version": 3,
     "name": "Mitre T-Codes Helper",
-    "description": "",
-    "version": "1.0",
-    "content_scripts": [
-        {
-            "matches": [
-                "<all_urls>"
-            ],
-            "js": [
-                "index.js"
-            ]
-        }
-    ],
+    "description": "Highlight multiple words in different groups in web pages.",
     "icons": {
         "16": "/images/Mitre ATT&CK logo 16p transparent.png",
         "48": "/images/Mitre ATT&CK logo 48p transparent.png",
         "128": "/images/Mitre ATT&CK logo 128p transparent.png"
     },
-    "permissions": [
-        "tabs",
-        "activeTab",
-        "scripting"
-    ],
-    "background": {
-        "service_worker": "background.js"  
+    "browser_action": {
+       "default_icon": "/images/Mitre ATT&CK logo 16p transparent.png",
+       "default_popup": "index.html"
     },
-    "host_permissions": [
-        "http://127.0.0.1:5000/*",
-        "<all_urls>"
-    ],
-    "action": {
-        "default_icon": {
-            "16": "/images/Mitre ATT&CK logo 16p transparent.png",
-            "48": "/images/Mitre ATT&CK logo 48p transparent.png",
-            "128": "/images/Mitre ATT&CK logo 128p transparent.png"
-        },
-        "default_popup": "index.html"
-    }
-}
+ 
+    "permissions": [ "tabs", "http://*/*", "https://*/*", "storage" ],
+ 
+    "content_scripts": [ {
+       "all_frames": true,
+       "js": ["index.js"],
+       "run_at": "document_idle",
+       "matches": [ "http://*/*", "https://*/*", "file://*/*" ]
+    } ],
+ 
+    "update_url": "https://clients2.google.com/service/update2/crx",
+    "manifest_version": 2,
+    "version": "0.1"
+ }
