--- a/manifest.json
+++ b/manifest.json
@@ -2,25 +2,36 @@
     "name": "Mitre T-Codes Helper",
     "description": "Highlight multiple words in different groups in web pages.",
     "icons": {
-        "16": "/images/Mitre ATT&CK logo 16p transparent.png",
-        "48": "/images/Mitre ATT&CK logo 48p transparent.png",
-        "128": "/images/Mitre ATT&CK logo 128p transparent.png"
+      "16": "/images/Mitre ATT&CK logo 16p transparent.png",
+      "48": "/images/Mitre ATT&CK logo 48p transparent.png",
+      "128": "/images/Mitre ATT&CK logo 128p transparent.png"
     },
-    "browser_action": {
-       "default_icon": "/images/Mitre ATT&CK logo 16p transparent.png",
-       "default_popup": "index.html"
+    "action": {
+      "default_icon": "/images/Mitre ATT&CK logo 16p transparent.png",
+      "default_popup": "index.html"
     },
- 
-    "permissions": [ "tabs", "http://*/*", "https://*/*", "storage" ],
- 
-    "content_scripts": [ {
-       "all_frames": true,
-       "js": ["index.js"],
-       "run_at": "document_idle",
-       "matches": [ "http://*/*", "https://*/*", "file://*/*" ]
-    } ],
- 
+    "permissions": [
+      "tabs",
+      "storage"
+    ],
+    "content_scripts": [
+      {
+        "all_frames": true,
+        "js": [
+          "index.js"
+        ],
+        "run_at": "document_idle",
+        "matches": [
+          "<all_urls>"
+        ]
+      }
+    ],
     "update_url": "https://clients2.google.com/service/update2/crx",
-    "manifest_version": 2,
-    "version": "0.1"
- }
+    "manifest_version": 3,
+    "version": "0.1",
+    "content_security_policy": {},
+    "host_permissions": [
+      "http://*/*",
+      "https://*/*"
+    ]
+  }
