Doesn't look pretty, but the copy button finally works.

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,9 @@
     "permissions": [
         "tabs",
         "activeTab",
-        "scripting"
+        "scripting",
+        "clipboardWrite",
+        "clipboardRead"
     ],
     "background": {
         "service_worker": "background.js"
